// Diato - Reverse Proxying for Hipsters
//
// Copyright 2016-2017 Dolf Schimmel
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package diato;

import "github.com/golang/protobuf/ptypes/empty/empty.proto";

service UserBackend {
  rpc GetServerForUser(UserBackendRequest) returns (UserBackendResponse) {}
}

message UserBackendRequest {
  string name = 1;
}

message UserBackendResponse {
  string server = 1;
  uint32 port   = 2;
}

service Server {
  rpc GetConfigContents(google.protobuf.Empty) returns (ConfigContents) {}
}

message ConfigContents {
  bytes contents = 1;
}